Fixed issues with responsive design on mobile

--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body {
 .calc-wrapper {
 	margin: auto;
 	margin-top: 3%;
-	width: 25%;
+	width: 340px;
 	border-radius: 10px;
 	padding-bottom: 10px;
 	box-shadow: 0 20px 15px -10px black,
@@ -101,5 +101,13 @@ body {
 	display: inline-block;
 	text-shadow: 1px 1px 1px #000;
 	padding-right: 10px;
+}
+
+@media only screen and (max-width: 800px) {
+	.icon-container ul {
+		position: relative;
+		display: block;
+
+	}
 }
 
